[package]
name = "monirs"
version = "0.0.1"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2021"
license = "ISC"
repository = "https://github.com/ltheinrich/monirs"
description = "Linux monitoring software"
readme = "README.md"

[dependencies]
kern = "1.6.0"
chrono = "0.4.26"

[profile.release]
lto = true
codegen-units = 1
