[package]
name = "monirs"
version = "0.0.1"
authors = ["Lennart Heinrich <lennart@ltheinrich.de>"]
edition = "2024"
license = "ISC"
repository = "https://github.com/ltheinrich/monirs"
description = "Linux monitoring software"
readme = "README.md"

[dependencies]
kern = "1.8.3"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }

[profile.release]
lto = true
codegen-units = 1
